# libnbd

./: .gitignore  Makefile.am  README.md  configure.ac  podwrapper.pl.in  run.in
ci/: build.sh  manifest.yml  skipped_tests
ci/buildenv/: almalinux-8.sh  alpine-318.sh  centos-stream-8.sh  debian-12-cross-i686.sh  fedora-37.sh  fedora-rawhide.sh  opensuse-leap-15.sh  opensuse-tumbleweed.sh  ubuntu-2004.sh  ubuntu-2204.sh
ci/cirrus/: freebsd-13.vars  freebsd-current.vars  macos-13.vars
ci/containers/: almalinux-8.Dockerfile  alpine-317.Dockerfile  alpine-318.Dockerfile  alpine-edge.Dockerfile  centos-stream-8.Dockerfile  debian-11-cross-i686.Dockerfile  debian-11.Dockerfile  debian-12-cross-i686.Dockerfile  debian-12.Dockerfile  debian-sid.Dockerfile  fedora-37.Dockerfile  fedora-38.Dockerfile  fedora-rawhide.Dockerfile  opensuse-leap-15.Dockerfile  opensuse-tumbleweed.Dockerfile  ubuntu-2004.Dockerfile  ubuntu-2204.Dockerfile
ci/gitlab/: build-templates.yml  builds.yml  containers.yml
common/include/: Makefile.am
copy/: file-ops.c  main.c  nbd-ops.c
docs/: Makefile.am  libnbd-release-notes-1.16.pod  libnbd-security.pod  libnbd.pod
dump/: dump.c
examples/: copy-libev.c  glib-main-loop.c
fuse/: nbdfuse.c  operations.c
fuzzing/: libnbd-fuzz-wrapper.c
generator/: API.ml  API.mli  C.ml  GoLang.ml  Makefile.am  OCaml.ml  Python.ml  Rust.ml  Rust.mli  RustSys.ml  config.ml.in  config.mli  generator.ml  state_machine.ml  state_machine_generator.ml  states-connect-socket-activation.c  states-connect.c  states-issue-command.c  states-newstyle-opt-extended-headers.c  states-newstyle-opt-go.c  states-newstyle-opt-starttls.c  states-newstyle.c  states-reply-chunk.c  states-reply-simple.c  states-reply-structured.c  states-reply.c  utils.ml  utils.mli
golang/: Makefile.am  libnbd_240_opt_list_meta_test.go  libnbd_245_opt_list_meta_queries_test.go  libnbd_250_opt_set_meta_test.go  libnbd_255_opt_set_meta_queries_test.go  libnbd_590_aio_copy_test.go
golang/configure/: test.go
info/: can.c  info-can.sh  main.c  map.c  nbdinfo.pod
interop/: dirty-bitmap.c
lib/: aio.c  handle.c  internal.h  opt.c  rw.c
ocaml/: helpers.c  nbd-c.h
python/: handle.c
rust/: Cargo.toml  Makefile.am  run-tests.sh.in
rust/cargo_test/: Cargo.toml
rust/examples/: concurrent-read-write.rs  connect-command.rs  fetch-first-sector.rs  get-size.rs
rust/libnbd-sys/: Cargo.toml
rust/src/: async_handle.rs  lib.rs  types.rs  utils.rs
rust/tests/: test_110_defaults.rs  test_120_set_non_defaults.rs  test_200_connect_command.rs  test_220_opt_list.rs  test_240_opt_list_meta.rs  test_245_opt_list_meta_queries.rs  test_250_opt_set_meta.rs  test_255_opt_set_meta_queries.rs  test_300_get_size.rs  test_460_block_status.rs  test_465_block_status_64.rs  test_620_stats.rs
scripts/: git.orderfile
tests/: Makefile.am  closure-lifetimes.c  meta-base-allocation.c
ublk/: nbdublk.c  tgt.c
